data: Windows 10/11 support — PowerShell sync + .gitattributes + docs
- scripts/sync-recorder-data.ps1: PowerShell equivalent of the bash sync
  script, runs natively on Windows without WSL or Git Bash.
- .gitattributes: forces LF for source/data/.sh files, CRLF for
  .ps1/.bat/.cmd so each OS's tooling sees the line endings it expects.
  Prevents Windows checkout from auto-CRLF-converting the committed JSON
  blobs (would otherwise balloon every diff).
- CLAUDE.md: split "Build & run" into macOS and Windows sections with
  PowerShell-friendly commands, and document the cross-platform notes
  (OSXFullScreenAdapter is already OS-guarded, --add-opens com.apple.eawt
  flags are benign warnings on Windows). Portable-data section now shows
  both sync invocations side by side.

The Java side was already cross-platform — JBIN is derived from java.home,
ClientUI guards OSXFullScreenAdapter with OSType.MacOS, paths use
java.nio.file.Paths. The only new file the user needs on Windows is the
PowerShell sync script.